# embeddingDocProvideQuery

./: .env  .gitignore  README.md  api_server.py  config.py  embedding_doc.py  pyproject.toml  requirements.txt
static/: brctl.txt  chrome_extension.md
util/: file_util.py  llm_token.py
