[tool.poetry]
name = "ask_paper"
version = "0.1.0"
description = ""
authors = ["彭泗雄 <pengsixiong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.163"
openai = "^0.27.6"
pypdf = "^3.8.1"
chromadb = "0.3.21"
tiktoken = "^0.4.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.7"
jq = "^1.4.1"
unstructured = "^0.6.5"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
